enum Action {
    FORWARD, BACKWARD, OPENCLOSE, WAIT, OVER
}
